fix: sidebar spacings

--- a/src/components/BurgerMenu/index.module.less
+++ b/src/components/BurgerMenu/index.module.less
@@ -1,3 +1,9 @@
-.wrapper {
-  background: #f9f9f9;
+.drawer :global(.ant-drawer-close) {
+  position: relative;
+  left: -10px;
+}
+
+.header {
+  position: relative;
+  left: -10px;
 }
