--- a/src/components/DataSourcesMenu/index.module.less
+++ b/src/components/DataSourcesMenu/index.module.less
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 0 10px 12px;
-  padding: 0 10px 10px;
+  padding: 13px 5px 13px 15px;
   overflow: hidden;
   color: #470d69;
   font-weight: 600;
