--- a/src/components/ExploreCubes/index.module.less
+++ b/src/components/ExploreCubes/index.module.less
@@ -4,16 +4,11 @@
 }
 
 .header {
-  padding: 19px 16px;
   border-bottom: 1px solid var(--color-dimgray-200);
 }
 
 .body {
   padding: 0 11px;
-
-  &Mobile {
-    padding: 0;
-  }
 }
 
 .collapse {
@@ -156,8 +151,4 @@
 
 .freeMembers {
   margin-top: 2px;
-}
-
-.cubes {
-  padding: 0 11px;
 }
