--- a/src/components/ModelsSidebar/index.module.less
+++ b/src/components/ModelsSidebar/index.module.less
@@ -35,7 +35,7 @@
 }
 
 .select {
-  width: 248px;
+  width: 232px;
 }
 
 .selectMobile {
