--- a/src/components/Sidebar/index.module.less
+++ b/src/components/Sidebar/index.module.less
@@ -1,7 +1,5 @@
 .wrapper {
-  width: 300px;
-  // height: 100%;
-  // padding: 0 0 25px;
+  width: 282px;
   background: #f9f9f9;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
 
@@ -24,6 +22,5 @@
 }
 
 .body {
-  padding: 16px 0;
   background: #f9f9f9;
 }
