--- a/src/components/SidebarMenu/index.module.less
+++ b/src/components/SidebarMenu/index.module.less
@@ -1,8 +1,28 @@
+.wrapper {
+  padding: 16px 11px 0;
+}
+
 .linkWrapper {
   width: 100%;
 }
 
 .link {
   width: 100%;
+
+  margin-bottom: 10px;
   text-align: left;
+}
+
+.icon {
+  position: relative;
+  top: 2px;
+}
+
+.active {
+  background: linear-gradient(
+      0deg,
+      rgba(71, 13, 105, 0.1) 0%,
+      rgba(71, 13, 105, 0.1) 100%
+    ),
+    #fff;
 }
